--- a/environment.yml
+++ b/environment.yml
@@ -12,6 +12,8 @@ dependencies:
   - backcall=0.2.0=pyhd3eb1b0_0
   - blas=1.0=mkl
   - bottleneck=1.3.5=py310ha9d4c09_0
+  - brotli=1.0.9=h5eee18b_7
+  - brotli-bin=1.0.9=h5eee18b_7
   - brotlipy=0.7.0=py310h7f8727e_1002
   - bzip2=1.0.8=h7b6447c_0
   - ca-certificates=2023.01.10=h06a4308_0
@@ -19,6 +21,7 @@ dependencies:
   - cffi=1.15.1=py310h5eee18b_3
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
   - comm=0.1.2=py310h06a4308_0
+  - contourpy=1.0.5=py310hdb19cb5_0
   - cryptography=38.0.4=py310h9ce1e76_0
   - cuda=11.6.1=0
   - cuda-cccl=11.6.55=hf6102b2_0
@@ -51,17 +54,26 @@ dependencies:
   - cuda-toolkit=11.6.1=0
   - cuda-tools=11.6.1=0
   - cuda-visual-tools=11.6.1=0
+  - cycler=0.11.0=pyhd3eb1b0_0
+  - dbus=1.13.18=hb2f20db_0
   - debugpy=1.5.1=py310h295c915_0
   - decorator=5.1.1=pyhd3eb1b0_0
   - entrypoints=0.4=py310h06a4308_0
   - executing=0.8.3=pyhd3eb1b0_0
+  - expat=2.4.9=h6a678d5_0
   - ffmpeg=4.2.2=h20bf706_0
   - flit-core=3.6.0=pyhd3eb1b0_0
+  - fontconfig=2.14.1=h52c9d5c_1
+  - fonttools=4.25.0=pyhd3eb1b0_0
   - freetype=2.12.1=h4a9f257_0
   - gds-tools=1.5.1.14=0
   - giflib=5.2.1=h5eee18b_1
+  - glib=2.69.1=he621ea3_2
   - gmp=6.2.1=h295c915_3
   - gnutls=3.6.15=he1e5248_0
+  - gst-plugins-base=1.14.0=h8213a91_2
+  - gstreamer=1.14.0=h28cd5cc_2
+  - icu=58.2=he6710b0_3
   - idna=3.4=py310h06a4308_0
   - intel-openmp=2021.4.0=h06a4308_3561
   - ipykernel=6.19.2=py310h2f386ee_0
@@ -72,10 +84,16 @@ dependencies:
   - jsonschema=4.16.0=py310h06a4308_0
   - jupyter_client=7.4.8=py310h06a4308_0
   - jupyter_core=5.1.1=py310h06a4308_0
+  - kiwisolver=1.4.4=py310h6a678d5_0
+  - krb5=1.19.4=h568e23c_0
   - lame=3.100=h7b6447c_0
   - lcms2=2.12=h3be6417_0
   - ld_impl_linux-64=2.38=h1181459_1
   - lerc=3.0=h295c915_0
+  - libbrotlicommon=1.0.9=h5eee18b_7
+  - libbrotlidec=1.0.9=h5eee18b_7
+  - libbrotlienc=1.0.9=h5eee18b_7
+  - libclang=10.0.1=default_hb85057a_2
   - libcublas=11.9.2.110=h5e84587_0
   - libcublas-dev=11.9.2.110=h5c901ab_0
   - libcufft=10.7.1.112=hf425ae0_0
@@ -88,16 +106,20 @@ dependencies:
   - libcusparse=11.7.2.124=h7538f96_0
   - libcusparse-dev=11.7.2.124=hbbe9722_0
   - libdeflate=1.8=h7f8727e_5
+  - libedit=3.1.20221030=h5eee18b_0
+  - libevent=2.1.12=h8f2d780_0
   - libffi=3.4.2=h6a678d5_6
   - libgcc-ng=11.2.0=h1234567_1
   - libgomp=11.2.0=h1234567_1
   - libidn2=2.3.2=h7f8727e_0
+  - libllvm10=10.0.1=hbcb73fb_5
   - libnpp=11.6.3.124=hd2722f0_0
   - libnpp-dev=11.6.3.124=h3c42840_0
   - libnvjpeg=11.6.2.124=hd473ad6_0
   - libnvjpeg-dev=11.6.2.124=hb5906b9_0
   - libopus=1.3.1=h7b6447c_0
   - libpng=1.6.37=hbc83047_0
+  - libpq=12.9=h16c4e8d_3
   - libsodium=1.0.18=h7b6447c_0
   - libstdcxx-ng=11.2.0=h1234567_1
   - libtasn1=4.16.0=h27cfd23_0
@@ -107,17 +129,26 @@ dependencies:
   - libvpx=1.7.0=h439df22_0
   - libwebp=1.2.4=h11a3e52_0
   - libwebp-base=1.2.4=h5eee18b_0
+  - libxcb=1.15=h7f8727e_0
+  - libxkbcommon=1.0.1=hfa300c1_0
+  - libxml2=2.9.14=h74e7548_0
+  - libxslt=1.1.35=h4e12654_0
   - lz4-c=1.9.4=h6a678d5_0
   - markupsafe=2.1.1=py310h7f8727e_0
+  - matplotlib=3.6.2=py310h06a4308_0
+  - matplotlib-base=3.6.2=py310h945d387_0
   - matplotlib-inline=0.1.6=py310h06a4308_0
   - mkl=2021.4.0=h06a4308_640
   - mkl-service=2.4.0=py310h7f8727e_0
   - mkl_fft=1.3.1=py310hd6ae3a3_0
   - mkl_random=1.2.2=py310h00e6091_0
+  - munkres=1.1.4=py_0
   - ncurses=6.4=h6a678d5_0
   - nest-asyncio=1.5.6=py310h06a4308_0
   - nettle=3.7.3=hbbd107a_1
   - nsight-compute=2022.4.1.6=0
+  - nspr=4.33=h295c915_0
+  - nss=3.74=h0370c37_0
   - numexpr=2.8.4=py310h8879344_0
   - numpy=1.23.5=py310hd5efca6_0
   - numpy-base=1.23.5=py310h8e6c178_0
@@ -126,11 +157,13 @@ dependencies:
   - packaging=22.0=py310h06a4308_0
   - pandas=1.5.2=py310h1128e8f_0
   - parso=0.8.3=pyhd3eb1b0_0
+  - pcre=8.45=h295c915_0
   - pexpect=4.8.0=pyhd3eb1b0_3
   - pickleshare=0.7.5=pyhd3eb1b0_1003
   - pillow=9.3.0=py310hace64e9_1
   - pip=22.3.1=py310h06a4308_0
   - platformdirs=2.5.2=py310h06a4308_0
+  - ply=3.11=py310h06a4308_0
   - prompt-toolkit=3.0.36=py310h06a4308_0
   - psutil=5.9.0=py310h5eee18b_0
   - ptyprocess=0.7.0=pyhd3eb1b0_2
@@ -138,6 +171,8 @@ dependencies:
   - pycparser=2.21=pyhd3eb1b0_0
   - pygments=2.11.2=pyhd3eb1b0_0
   - pyopenssl=22.0.0=pyhd3eb1b0_0
+  - pyparsing=3.0.9=py310h06a4308_0
+  - pyqt=5.15.7=py310h6a678d5_1
   - pyrsistent=0.18.0=py310h7f8727e_0
   - pysocks=1.7.1=py310h06a4308_0
   - python=3.10.9=h7a1cb2a_0
@@ -147,13 +182,18 @@ dependencies:
   - pytorch-mutex=1.0=cuda
   - pytz=2022.7=py310h06a4308_0
   - pyzmq=23.2.0=py310h6a678d5_0
+  - qt-main=5.15.2=h327a75a_7
+  - qt-webengine=5.15.9=hd2b0992_4
+  - qtwebkit=5.212=h4eab89a_4
   - readline=8.2=h5eee18b_0
   - requests=2.28.1=py310h06a4308_0
   - setuptools=65.6.3=py310h06a4308_0
+  - sip=6.6.2=py310h6a678d5_0
   - six=1.16.0=pyhd3eb1b0_1
   - sqlite=3.40.1=h5082296_0
   - stack_data=0.2.0=pyhd3eb1b0_0
   - tk=8.6.12=h1ccaba5_0
+  - toml=0.10.2=pyhd3eb1b0_0
   - toolz=0.12.0=py310h06a4308_0
   - torchaudio=0.13.1=py310_cu116
   - torchvision=0.14.1=py310_cu116
@@ -169,4 +209,6 @@ dependencies:
   - zeromq=4.3.4=h2531618_0
   - zlib=1.2.13=h5eee18b_0
   - zstd=1.5.2=ha4553b6_0
+  - pip:
+      - pyqt5-sip==12.11.0
 prefix: /home/dhonicap/miniconda3/envs/pytorchenv
