Updated env file

--- a/environment.yml
+++ b/environment.yml
@@ -2,6 +2,7 @@ name: pytorchenv
 channels:
   - pytorch
   - nvidia
+  - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
@@ -16,8 +17,8 @@ dependencies:
   - brotli-bin=1.0.9=h5eee18b_7
   - brotlipy=0.7.0=py310h7f8727e_1002
   - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2023.01.10=h06a4308_0
-  - certifi=2022.12.7=py310h06a4308_0
+  - ca-certificates=2022.12.7=ha878542_0
+  - certifi=2022.12.7=pyhd8ed1ab_0
   - cffi=1.15.1=py310h5eee18b_3
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
   - comm=0.1.2=py310h06a4308_0
@@ -196,6 +197,7 @@ dependencies:
   - toml=0.10.2=pyhd3eb1b0_0
   - toolz=0.12.0=py310h06a4308_0
   - torchaudio=0.13.1=py310_cu116
+  - torchmetrics=0.11.1=pyhd8ed1ab_0
   - torchvision=0.14.1=py310_cu116
   - tornado=6.2=py310h5eee18b_0
   - traitlets=5.7.1=py310h06a4308_0
